[package]
name = "roboutil"
version = "0.1.0"
authors = ["Bogdan Olar <olar.bogdan.dev@gmail.com>"]
edition = "2018"

[lib]
name = "roboutil"
path = "src/lib.rs"

[[bin]]
name = "roboutil"
path = "src/bin.rs"

[dependencies]
miiobin = { git = "https://github.com/BogdanOlar/miiobin" }
clap = "2.33.0"