[package]
name = "roborockutil"
version = "0.1.0"
authors = ["Bogdan Olar <olar.bogdan.dev@gmail.com>"]
edition = "2018"

[lib]
name = "roborockutil"
path = "src/lib.rs"

[[bin]]
name = "roborockutil"
path = "src/bin.rs"

[dependencies]
miiobin = { git = "https://github.com/BogdanOlar/miiobin" }
clap = "2.33.0"